# rusty

./: .gitignore  Cargo.toml  GUIDE.md
src/: abi_fetcher.rs  calc_slip.rs  dex_fetcher.rs  dexpool_fetcher.rs  ethers_provider.rs  event_test.rs  fetch_eth_price.rs  fetch_poly_gas.rs  main.rs
src/ABIs/: UniswapV3Pool.abi
